--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,791 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  margin: inherit;
+  padding: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+*a,
+a:visited,
+a:link {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+}
+
+svg {
+  font-size: 50px !important;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #646060;
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #979696;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 15% 85%;
+  grid-template-rows: 60px auto;
+  height: 100vh !important;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    display: grid;
+    grid-template-columns: minmax(70px, 8%) 92%;
+    grid-template-rows: 60px auto;
+  }
+}
+
+.containerAside {
+  display: grid;
+  grid-template-columns: 0px 100%;
+  grid-template-rows: 60px auto;
+  overflow: hidden;
+  height: 100vh !important;
+}
+
+.nav {
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  border-top: 1px solid #c0c0c0;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  z-index: 899;
+}
+
+.nav__navbar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.nav__logo:hover {
+  cursor: pointer;
+}
+
+.nav__logo a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
+}
+
+.nav__logo img {
+  width: 50px;
+}
+
+.nav__logo span {
+  position: absolute;
+  top: 15px;
+  right: 2px;
+  font-size: 10px;
+}
+
+.nav__menu {
+  font-size: 50px !important;
+  fill: #333 !important;
+}
+
+.nav__search {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  max-width: 800px;
+}
+
+.nav__search input {
+  width: 100%;
+  border: 1px solid #c0c0c0;
+  background: transparent;
+  outline: 0;
+}
+
+.nav__search input:focus {
+  border-color: #07064d;
+}
+
+.nav__search input::placeholder {
+  font-size: 15px;
+}
+
+.nav__searchIcon {
+  border: 1px solid #c0c0c0;
+  height: 38px !important;
+  padding: 0;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav__searchIcon:hover {
+  cursor: pointer;
+}
+
+.nav__searchIcon svg {
+  font-size: 30px !important;
+  fill: #333 !important;
+}
+
+.nav__mic {
+  border-radius: 60px;
+  height: 45px;
+  width: 50px;
+  padding: 0;
+  margin-left: 10px;
+  background-color: #c0c0c050;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav__mic:hover {
+  cursor: pointer;
+}
+
+.nav__mic svg {
+  font-size: 30px !important;
+  fill: #333 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.nav__notification {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__notification svg:hover {
+  cursor: pointer;
+}
+
+.nav__avatar {
+  padding: 0 !important;
+  width: 30px;
+  height: 30px;
+}
+
+.main {
+  background-color: #c0c0c02d;
+  grid-column: 2/-1;
+  grid-row: 2/-1;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.aside {
+  background-color: white;
+  grid-column: 1/2;
+  grid-row: 2/-1;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.aside a {
+  display: flex;
+  align-items: center !important;
+  transition: all 0.5s;
+  text-decoration: none !important;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: capitalize;
+  height: 50px;
+  color: #333;
+}
+
+.aside a > .icon {
+  width: 25px;
+  margin-left: 30px;
+}
+
+.aside a > span {
+  margin-left: 20px;
+}
+
+.aside a:hover {
+  background: rgba(211, 211, 211, 0.5);
+  cursor: pointer;
+}
+
+.aside__subscriptionChannal {
+  display: flex;
+  flex-direction: column;
+}
+
+.aside__subscriptionChannal > h2 {
+  padding: 10px 20px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.aside__subscriptionChannal a > img {
+  width: 25px;
+  margin-left: 30px;
+}
+
+.aside__subscriptionChannal .sub_icon {
+  padding: 0 !important;
+  font-size: 25px !important;
+  margin-left: 30px;
+}
+
+@media screen and (max-width: 992px) {
+  .aside__subscriptionChannal {
+    display: none;
+  }
+}
+
+.aside__copyright {
+  padding-bottom: 30px;
+}
+
+.aside__copyright > p {
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  padding: 10px 20px;
+}
+
+.aside__copyright > span {
+  padding: 10px 20px;
+  color: #8d8585;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 992px) {
+  .aside__copyright {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .aside__aditionalLibrary {
+    display: none;
+  }
+  hr {
+    display: none !important;
+  }
+}
+
+.asideHide {
+  display: none;
+}
+
+.catagory {
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  padding: 10px 10px;
+  object-fit: contain;
+  position: sticky;
+  top: 0px;
+  right: 0;
+  background-color: white;
+  z-index: 899;
+}
+
+.catagory__container {
+  padding: 0px 20px;
+}
+
+.catagory__btn {
+  border-radius: 40px !important;
+  font-weight: 600 !important;
+  font-size: 12px !important;
+  text-transform: capitalize !important;
+  padding: 2px 10px !important;
+  background-color: #c0c0c050 !important;
+}
+
+.catagory__btn:hover {
+  background-color: #66606054 !important;
+}
+
+.catagory__btn:not(:last-child) {
+  margin-right: 10px;
+}
+
+.hideCatagory {
+  display: none;
+}
+
+.home {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.video {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  min-width: 200px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 0 !important;
+}
+
+@media screen and (max-width: 768px) {
+  .video {
+    max-width: 250px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .video {
+    max-width: 400px !important;
+    width: 100%;
+  }
+}
+
+.video__thumbnail {
+  position: relative;
+}
+
+.video__duration {
+  position: absolute;
+  bottom: 0px;
+  right: 10px;
+  background-color: black;
+  color: white;
+  padding: 5px;
+  font-weight: 600;
+}
+
+.video__media {
+  width: 100% !important;
+  margin-bottom: 0;
+}
+
+.video__info {
+  display: flex;
+  padding: 10px;
+  margin: 0;
+  align-items: center;
+  color: #333;
+}
+
+.video__info > h3 {
+  margin-left: 10px;
+  font-size: 15px;
+  text-transform: capitalize;
+  color: black;
+  margin-bottom: 0;
+}
+
+.video__info .avatar {
+  width: 30px !important;
+  height: 30px !important;
+  padding: 0 !important;
+}
+
+.video__channalName {
+  margin-left: 25%;
+  margin-bottom: 5px;
+  margin-top: -10px;
+  color: #5f5b5b;
+  font-size: 15px;
+}
+
+.video__reviews {
+  margin-left: 25%;
+  display: flex;
+}
+
+.video__reviews > h4 {
+  font-size: 15px;
+  color: #5f5b5b;
+  margin: 0px;
+}
+
+.video__reviews > h4:not(:first-child) {
+  margin-left: 10px;
+}
+
+.video:hover {
+  cursor: pointer;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.login > img {
+  width: 40px;
+  background: rgba(211, 211, 211, 0.432);
+  border-radius: 50px;
+  transition: all 0.5s;
+  padding: 10px;
+}
+
+.login > img:hover {
+  cursor: pointer;
+  background: lightgray;
+}
+
+@media screen and (min-width: 991px) {
+  .login {
+    display: flex;
+    justify-content: left !important;
+    align-items: center;
+    margin-left: 10px;
+  }
+}
+
+.searchvideo {
+  margin-bottom: 5px;
+  display: flex;
+  padding: 0 30px;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.searchvideo__media {
+  flex: 0 0 30%;
+  object-fit: contain;
+  padding: 0;
+}
+
+.searchvideo__info {
+  flex: 0 0 70%;
+  padding: 10px 20px;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.searchvideo__title {
+  font-size: 15px;
+  margin: 0;
+  padding: 0;
+}
+
+.searchvideo__channel {
+  padding: 0 !important;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 10px;
+  margin: 0;
+}
+
+.searchvideo__channel > h3 {
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+  margin-left: 10px;
+  text-transform: capitalize;
+}
+
+.searchvideo__reviews {
+  display: flex;
+  margin: 10px 0px;
+  padding: 0;
+}
+
+.searchvideo__reviews > h4 {
+  margin: 0;
+  font-size: 12px;
+  margin-right: 10px;
+  color: #333;
+}
+
+.searchvideo .description {
+  margin: 0 !important;
+  font-size: 14px;
+  color: #333;
+  font-weight: 500;
+}
+
+.videoPlayer {
+  padding: 5px 30px;
+  display: flex;
+}
+
+.player {
+  flex: 0 0 65%;
+  height: 100vh;
+  padding: 0 10px 0 30px;
+}
+
+.player__media {
+  width: 100%;
+  height: 60%;
+}
+
+.player__info h3 {
+  padding: 0;
+  font-size: 15px;
+  font-weight: 600;
+  color: #333;
+}
+
+.player__contentDetails {
+  display: flex;
+  margin-top: 10px;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.player__contentDetails .view__pubAt {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.player__contentDetails .view__pubAt div {
+  margin-right: 20px;
+}
+
+.player__contentDetails .statestic {
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.player__contentDetails .statestic div {
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.player__contentDetails .statestic .icon {
+  width: 25px;
+  padding: 0;
+  margin: 0;
+  margin-right: 10px;
+}
+
+.player__contentDetail {
+  display: flex;
+  flex-direction: column;
+}
+
+.player__contentDetail .about__channel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 !important;
+}
+
+.player__contentDetail .about__channel > div {
+  display: flex;
+  align-items: center;
+}
+
+.player__contentDetail .about__channel > div span {
+  margin-left: 10px;
+}
+
+.player__contentDetail .about__channel > button {
+  background-color: #cc0000 !important;
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 15px;
+}
+
+.player__contentDetail .describtion {
+  height: 80px;
+  padding: 20px 0px;
+  overflow: hidden;
+  margin: 0;
+}
+
+.player .border {
+  display: block;
+  background-color: #979696;
+  margin: 10px 0px;
+  height: 1px;
+  padding: 0 !important;
+}
+
+.player .commentbox {
+  padding: 10px 0px;
+  display: flex;
+  align-items: center;
+}
+
+.player .commentbox > div {
+  display: flex;
+  padding: 0;
+  align-items: center;
+}
+
+.player .commentbox > div span {
+  margin: 0px;
+}
+
+.player .commentbox > div span:not(:first-child) {
+  margin-left: 10px;
+}
+
+.player .commentbox > div:not(:first-child) {
+  margin-left: 20px;
+  text-transform: capitalize;
+  display: flex;
+}
+
+.player .commentbox > div:not(:first-child) span {
+  margin: 0;
+  margin-left: 10px;
+}
+
+.player .commentbox > div:not(:first-child) .sortBy {
+  width: 25px;
+  padding: 0;
+  margin: 0;
+}
+
+.relatedVideos {
+  flex: 0 0 35%;
+  padding: 0;
+  height: 100vh;
+}
+
+.relatedVideos :hover {
+  cursor: pointer;
+}
+
+.relatedVideos .relatedVideo {
+  display: flex;
+  padding: 0;
+}
+
+.relatedVideos .relatedVideo > img {
+  width: 200px;
+  height: 100px;
+}
+
+.relatedVideos .relatedVideo:not(:first-child) {
+  margin-top: 5px;
+}
+
+.relatedVideos__info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5px;
+}
+
+.relatedVideos__info > h3 {
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.relatedVideos__info > h4 {
+  font-size: 12px;
+  padding: 10px 0px;
+  font-weight: 600;
+}
+
+.relatedVideos__info .statistics {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.relatedVideos__info .statistics > span {
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+.comments {
+  display: flex;
+  padding: 0;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+
+.comments .avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+}
+
+.comments__info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  align-items: flex-start;
+}
+
+.comments__info span {
+  margin: 0;
+}
+
+.comments__info span:not(:first-child) {
+  margin-top: 8px;
+}
+
+.comments .like__dislike {
+  display: flex;
+  margin: 0;
+  margin-top: 8px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.comments .like__dislike img {
+  width: 20px;
+  margin: 0;
+}
+
+.comments .like__dislike img:not(:first-child) {
+  margin-left: 10px;
+}
+
+.comments .like__dislike span {
+  margin-left: 10px;
+}
+/*# sourceMappingURL=index.css.map */
